# aerospace-hackathon-2025

./: README.md  collision_detector.py  pyproject.toml  run_collision_detection.py  sgp4_gp_api.py  sgp4_propagator.py
data/: collision_warnings.csv  conjunctions_nested.json  debris_OMM.xml  debris_cosmos_2251.TLE  debris_cosmos_2251.json  dummy_timestamp.csv  output.czml  satellite_active.TLE
scripts/: csv_2_czml.py  csv_2_json.py  tle_2_propagation.py
ui/: README.md  package-lock.json  package.json  server.js  webpack.config.js
ui-v2/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui-v2/public/data/: iss_target.json
ui-v2/src/: index.css
ui-v2/src/components/: CesiumViewer.tsx  ConjunctionCard.tsx  ConjunctionList.tsx  ConjunctionTable.tsx  FilterControls.tsx  SatelliteInfo.tsx  TimelineControl.tsx  TopBar.tsx
ui-v2/src/hooks/: useConjunctions.ts  useSatelliteData.ts
ui-v2/src/pages/: Index.tsx
ui-v2/src/types/: satellite.ts
ui/SampleData/: Vehicle.czml  simple.czml
ui/src/: Sandcastle.js  index.html  index.js
