[project]
name = "aerospace-hackathon-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Dokeun Oh",email = "ohdoking@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "sgp4 (>=2.23,<3.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
